--- a/playbook.yml
+++ b/playbook.yml
@@ -14,6 +14,9 @@
   - role: oh-my-zsh
     tags:
       - scripts
+  - role: starship-prompt
+    tags:
+      - starship
   - role: stephdewit.nvm
     become: true
     become_user: "{{ user }}"
@@ -32,7 +35,7 @@
   - name: Install Kops
     snap:
       name: kops
-  - name:
+  - name: Install Python virtual env
     apt:
       name: python3-venv
   - name: Install Poetry
@@ -52,22 +55,3 @@
     tags:
       - scripts
 
-  - name: Download Starship prompt installer
-    get_url:
-      url:  https://starship.rs/install.sh
-      dest: /opt/install-starship
-      mode: '0755'
-    tags:
-      - starship
-  - name: Install Starship
-    ansible.builtin.shell: /opt/install-starship -y
-    args:
-      creates: /usr/local/bin/starship
-    tags:
-      - starship
-  - name: Enable Starship on Zsh
-    blockinfile:
-      path: "/home/{{ user }}/.zshrc"
-      block: 'eval "$(starship init zsh)"'
-    tags:
-      - starship
