--- a/playbook.yml
+++ b/playbook.yml
@@ -4,54 +4,63 @@
   vars:
     user: javiertoledos
   roles:
-  - role: geerlingguy.docker
-    vars:
-      docker_users:
-      - "{{ user }}"
-  - role: script-tooling
-    tags:
-      - scripts
-  - role: oh-my-zsh
-    tags:
-      - scripts
-  - role: starship-prompt
-    tags:
-      - starship
-  - role: stephdewit.nvm
-    become: true
-    become_user: "{{ user }}"
-    vars:
-      nvm_node_version: lts
-    environment:
-      NVM_DIR: "{{ user }}/.nvm"
-  - role: psql-client
-  - role: githubixx.kubectl
-  - role: helm3
-  - role: deekayen.awscli2
+    - role: geerlingguy.docker
+      vars:
+        docker_users:
+        - "{{ user }}"
+    - role: geerlingguy.php-versions
+    - role: geerlingguy.php
+      vars:
+        php_enable_webserver: false
+        php_default_version_debian: "7.4"
+        php_packages_extra: 
+          - "php-zip"
+    - role: geerlingguy.php
+      vars:
+        php_enable_webserver: false
+        php_default_version_debian: "8.1"
+        php_packages_extra: 
+          - "php-zip"
+    - role: geerlingguy.composer
+      vars:
+        composer_home_path: '/home/{{ user }}/.composer'
+        composer_home_owner: "{{ user }}"
+        composer_home_group: "{{ user }}"        
+    - role: script-tooling
+      tags:
+        - scripts
+    - role: asdf
+      become: true
+      become_user: "{{ user }}"
+    - role: oh-my-zsh
+      tags:
+        - scripts
+    - role: starship-prompt
+      tags:
+        - starship
+    - role: gantsign.inotify
+      inotify_max_user_watches: 524288
+    - role: poetry
+    - role: psql-client
+    - role: githubixx.kubectl
+    - role: helm3
+    - role: deekayen.awscli2
   tasks:
-  - name: Install Digital Ocean control
-    snap:
-      name: doctl
-  - name: Install Kops
-    snap:
-      name: kops
-  - name: Install Python virtual env
-    apt:
-      name: python3-venv
-  - name: Install Poetry
-    become: true
-    become_user: "{{ user }}"
-    ansible.builtin.shell: curl -sSL https://install.python-poetry.org | python3 -
-    args:
-      executable: /bin/bash
-      creates: "/home/{{user}}/.local/bin/poetry"
-  
-  - name: Enable Oh My Zsh! plugins
-    lineinfile:
-      path: "/home/{{ user }}/.zshrc"
-      regex: "^plugins=*"
-      line: plugins=(asdf composer aws git kubectl nvm poetry z)
+    - name: Install Digital Ocean control
+      snap:
+        name: doctl
+    - name: Install Kops
+      snap:
+        name: kops
 
-    tags:
-      - scripts
-
+    - name: Enable Oh My Zsh! plugins
+      lineinfile:
+        path: "/home/{{ user }}/.zshrc"
+        regex: "^plugins=*"
+        line: plugins=(asdf composer aws git kubectl poetry z)
+      tags:
+        - scripts
+    - name: Change shell to zsh
+      ansible.builtin.user:
+        user: "{{ user }}"
+        shell: /bin/zsh
